sprint-review-app/backend/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: kir-prod
  name: sprint-review-backend
  labels:
    app: sprint-review-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sprint-review-backend
  template:
    metadata:
      namespace: kir-prod
      labels:
        app: sprint-review-backend
    spec:
      containers:
        - name: backend
          image: harbor.sch.bme.hu/org-kir-dev/sprint-review-app-v2-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
              ephemeral-storage: 50Mi
            limits:
              cpu: 150m
              memory: 192Mi
              ephemeral-storage: 50Mi
      imagePullSecrets:
        - name: harbor-secret
